// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmSessionHardware has the expected html structure when there're errors 1`] = `
<div
  class="tm-session"
>
  <div
    class="tm-session-container"
  >
    <div
      class="tm-session-header"
    >
      <a>
        <i
          class="material-icons"
        >
          arrow_back
        </i>
      </a>
       
      <div
        class="tm-session-title"
      >
        
        Sign In
      
      </div>
       
      <a>
        <i
          class="material-icons"
        >
          help_outline
        </i>
      </a>
    </div>
     
    <div
      class="tm-session-main"
    >
      <div
        class="tm-hardware-state"
      >
        <!---->
         
        <i
          class="tm-hardware-state__icon material-icons"
        >
          usb
        </i>
         
        <div
          class="tm-hardware-state__label"
        >
          Please plug in your Ledger Nano S and open the Cosmos app
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="tm-session-footer"
    >
      <p
        class="tm-form-msg sm tm-form-msg--error"
      >
        
        No Ledger found
      
      </p>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware has the expected html structure with no errors 1`] = `
<div
  class="tm-session"
>
  <div
    class="tm-session-container"
  >
    <div
      class="tm-session-header"
    >
      <a>
        <i
          class="material-icons"
        >
          arrow_back
        </i>
      </a>
       
      <div
        class="tm-session-title"
      >
        
        Sign In
      
      </div>
       
      <a>
        <i
          class="material-icons"
        >
          help_outline
        </i>
      </a>
    </div>
     
    <div
      class="tm-session-main"
    >
      <div
        class="tm-hardware-state"
      >
        <!---->
         
        <i
          class="tm-hardware-state__icon material-icons"
        >
          usb
        </i>
         
        <div
          class="tm-hardware-state__label"
        >
          Please plug in your Ledger Nano S and open the Cosmos app
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="tm-session-footer"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 1`] = `
"<div class=\\"tm-session\\"><div class=\\"tm-session-container\\"><div class=\\"tm-session-header\\"><a><i class=\\"material-icons\\">arrow_back</i></a> <div class=\\"tm-session-title\\">
        Sign In
      </div> <a><i class=\\"material-icons\\">help_outline</i></a></div> <div class=\\"tm-session-main\\"><div class=\\"tm-hardware-state\\"><!----> <i class=\\"tm-hardware-state__icon material-icons\\">usb</i> <div class=\\"tm-hardware-state__label\\">Please plug in your Ledger Nano S and open the Cosmos app</div></div> <!----></div> <div class=\\"tm-session-footer\\"><!----></div></div></div>"
`;

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 2`] = `
"<div class=\\"tm-session\\"><div class=\\"tm-session-container\\"><div class=\\"tm-session-header\\"><a><i class=\\"material-icons\\">arrow_back</i></a> <div class=\\"tm-session-title\\">
        Sign In
      </div> <a><i class=\\"material-icons\\">help_outline</i></a></div> <div class=\\"tm-session-main\\"><!----> <div class=\\"tm-hardware-state\\"><img src=\\"~assets/images/loader.svg\\"> <i class=\\"tm-hardware-state__icon material-icons\\"></i> <div class=\\"tm-hardware-state__label\\">Connecting...</div></div></div> <div class=\\"tm-session-footer\\"><!----></div></div></div>"
`;
